<resources>
    <string name="app_name">Smart School</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="register_txt">Don\'t have an account? Signup now.</string>
    <string name="login">Login</string>
    <string name="invalid_email_pass">Invalid email or password!</string>
    <string name="tv_signup">Sign-up</string>
    <string name="tv_upload_profile_picture">Upload profile photo</string>
    <string name="name">Full name</string>
    <string name="username">User name</string>
    <string name="mail_hint">E-mail</string>
    <string name="phone_number_hint">Phone</string>
    <string name="password_hint">Password</string>
    <string name="school_hint">School</string>
    <string name="school_info">School Info</string>
    <string name="grades_info">Grades</string>
    <string name="courses_info">Courses</string>
    <string name="signup">Signup</string>
    <string name="signup_email_validation_empty_email">Empty e-mail!</string>
    <string name="signup_email_validation_invalid_email">Invalid e-mail!</string>
    <string name="logging_in">Loggin in...</string>
    <string name="signup_school_validation_empty_school">Empty school!</string>
    <string name="signup_password_validation_empty_password">Empty password!</string>
    <string name="signup_password_validation_invalid_password">Password must be at least 8 char</string>
    <string name="signup_phone_validation_empty_phone">Empty phone!</string>
    <string name="signup_phone_validation_invalid_phone">Invalid phone!</string>
    <string name="signup_username_validation_empty_username">Empty username!</string>
    <string name="signup_name_validation_empty_name">Empty name!</string>
    <string name="signing_up">Signing up...</string>
    <string name="radio_teacher">Teacher</string>
    <string name="radio_student">Student</string>

</resources>
