<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:background="@color/white"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">


    <ImageView
        android:id="@+id/schoollogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_school" />
    <LinearLayout
        android:id="@+id/fillinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/schoollogo"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:background="@drawable/borderd_ettext"
            android:drawableLeft="@drawable/ic_username"
            android:drawablePadding="9dp"
            android:drawableStart="@drawable/ic_username"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingTop="13dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/et_pass"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="1dp"
            android:adjustViewBounds="true"
            android:background="@drawable/borderd_ettext"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="9dp"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingTop="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="12sp" /><!-- LoginActivity button -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="23dp"
            android:background="@drawable/round_button"
            android:text="@string/login"
            android:textAllCaps="false"

            android:textColor="@color/white"
            android:textSize="12sp" />
        <!-- Link to Registration Screen -->
        <TextView
            android:id="@+id/link_to_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="40dip"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/register_txt"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </LinearLayout>
</RelativeLayout>