<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <LinearLayout
        android:id="@+id/activity_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:orientation="vertical"
        tools:context="com.example.smartsolutions.signuputil.SignupActivity">

        <LinearLayout
            android:id="@+id/upperBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borderd_bar"
            android:minHeight="40dp"
            android:padding="10dp">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/tv_signup"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/uploadPPlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="30dp"
                android:background="@drawable/ic_default_user"
                android:gravity="center_horizontal"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/tv_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_profile"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:padding="5dp"
                android:text="@string/tv_upload_profile_picture"
                android:textColor="#000"
                android:textSize="@dimen/text_size" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/Llinfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="start"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:background="@drawable/borderd_ettext"
                android:gravity="start"
                android:hint="@string/name"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:minLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/et_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/borderd_ettext"
                android:gravity="start"
                android:hint="@string/username"
                android:maxLines="1"
                android:minLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/borderd_ettext"
                android:gravity="start"
                android:hint="@string/mail_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:minLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/text_size" />


            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/borderd_ettext"
                android:gravity="start"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:minLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/text_size" />


            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/borderd_ettext"
                android:gravity="start"
                android:hint="@string/phone_number_hint"
                android:inputType="phone"
                android:maxLines="1"
                android:minLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/text_size" />


            <EditText
                android:id="@+id/et_school"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/borderd_ettext"
                android:gravity="start"
                android:hint="@string/school_hint"
                android:inputType="text"
                android:maxLines="1"
                android:minLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/infoBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Llinfo">

            <TextView
                android:id="@+id/tv_school_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/borderd_bar"
                android:gravity="start"
                android:padding="3dp"
                android:text="@string/school_info"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/schoolInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/gray"
            android:gravity="center"
            android:minHeight="30dp"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_student"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/radio_student"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/radio_teacher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_teacher"
                    android:textColor="@color/black" />


            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/grades_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@+id/schoolInfo"
            android:minHeight="30dp">

            <TextView
                android:id="@+id/tv_grades_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/borderd_bar"
                android:gravity="start"
                android:minHeight="30dp"
                android:padding="3dp"
                android:text="@string/grades_info"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/grades_switcher_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/gray"
            android:gravity="center"
            android:minHeight="30dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/grades_of_teacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/gray"
                android:gravity="center"
                android:minHeight="30dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <CheckBox
                    android:id="@+id/teacher_grades_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Grade1"
                    android:textColor="@color/black" />

                <CheckBox
                    android:id="@+id/teacher_grades_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Grade2"
                    android:textColor="@color/black" />

                <CheckBox
                    android:id="@+id/teacher_grades_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Grade3"
                    android:textColor="@color/black" />

                <CheckBox
                    android:id="@+id/teacher_grades_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Grade4"
                    android:textColor="@color/black" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/grades_of_student"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/gray"
                android:gravity="center"
                android:minHeight="30dp"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/radio_grades_student"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/grade1_student"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="Grade1"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:id="@+id/grade2_student"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Grade2"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:id="@+id/grade3_student"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Grade3"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:id="@+id/grade4_student"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Grade4"
                        android:textColor="@color/black" />


                </RadioGroup>


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/courses_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="30dp">

            <TextView
                android:id="@+id/tv_courses_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/borderd_bar"
                android:gravity="start"
                android:minHeight="30dp"
                android:padding="3dp"
                android:text="@string/courses_info"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/courses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:clickable="true"
            android:focusable="true"
            android:gravity="left"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Arabic"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/checkbox_arabic_course"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="English"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/checkbox_english_course"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="Math"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/checkbox_math_course"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Science"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/checkbox_science_course"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />

        </LinearLayout>

        <Button
            android:id="@+id/btnsignup"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:background="@drawable/round_button"
            android:gravity="center"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </LinearLayout>
</ScrollView>
